--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,12 +18,22 @@
         <item name="theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
         <item name="android:background">@color/colorPrimary</item>
     </style>
+
     <style name="Text">
         <item name="fontFamily">sans-serif</item>
         <item name="android:textColor">@color/colorBlack</item>
+        <item name="android:textSize">16sp</item>
     </style>
     <style name="Text.Primary">
         <item name="android:textStyle">bold</item>
+    </style>
+    <style name="Text.HeadLine">
+        <item name="fontFamily">sans-serif-medium</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+    <style name="Text.Sub">
+        <item name="fontFamily">sans-serif-light</item>
+        <item name="android:textSize">14dp</item>
     </style>
 
 </resources>
