--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,5 +35,9 @@
         <item name="fontFamily">sans-serif-light</item>
         <item name="android:textSize">14dp</item>
     </style>
+    <style name="Text.Subtitle">
+        <item name="fontFamily">sans-serif-thin</item>
+        <item name="android:textSize">12dp</item>
+    </style>
 
 </resources>
