--- a/app/src/main/res/layout/order_info.xml
+++ b/app/src/main/res/layout/order_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -36,36 +37,72 @@
                 android:layout_marginBottom="8dp"
                 android:text="TextView" />
 
-            <TextView
-                android:id="@+id/start_addr_info"
-                style="@style/Text"
+            <LinearLayout
+                android:id="@+id/from_to_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/order_date_info"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="4dp"
-                android:text="TextView" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/end_addr_info"
-                style="@style/Text"
+                <TextView
+                    android:id="@+id/from"
+                    style="@style/Text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="2dp"
+                    android:text="@string/from_label" />
+
+                <TextView
+                    android:id="@+id/destination"
+                    style="@style/Text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="16dp"
+                    android:text="@string/to_label" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/start_addr_info"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                android:text="TextView" />
+                android:layout_below="@+id/order_date_info"
+                android:layout_toEndOf="@+id/from_to_view"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/start_addr_info"
+                    style="@style/Text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="2dp"
+                    android:text="TextView" />
+
+                <TextView
+                    android:id="@+id/end_addr_info"
+                    style="@style/Text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="2dp"
+                    android:text="TextView" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/about_ride"
                 style="@style/Text.Sub"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/end_addr_info"
+                android:layout_below="@+id/from_to_view"
                 android:layout_marginStart="16dp"
                 android:text="@string/about_ride" />
 
